Add password gate for member management

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 NEXTAUTH_URL=http://localhost:9002
+NEXT_PUBLIC_MEMBERS_PAGE_PASSWORD=
